feat: 이모지를 유니코드가 아닌 이미지로 반환되게
